2000-01-23  Kenichi OKADA <okada@opaopa.org>

	* sha1.el (TopLevel): Defun-maybe `sha1-string' when compile.

2000-01-23  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-auth-digest-md5): Don't save insecure words.

2000-01-22  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el (TopLevel): Update example for
	`digest-md5-build-response-value'.

2000-01-22  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Autoload `digest-md5-parse-digest-challenge'.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.6 released.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (TopLevel): Eval `sasl' when compile.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Delete function
	`sasl-digest-md5-parse-digest-challenge'.
	* smtp.el (smtp-auth-digest-md5): Don't use
	`sasl-digest-md5-parse-digest-challenge'.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* scram-md5.el (sasl-scram-md5-client-security-info): Eval when compile.

2000-01-21  Kenichi OKADA <okada@opaopa.org>

	* digest-md5.el (TopLevel): Delete `digest-md5-nonce-count'.
	(digest-md5-build-response-value): Add `realm',
	`nonce' and `nonce-count'.
	(digest-md5-digest-response): Add options as RFC.
	* sasl.el (TopLevel): New variable `sasl-digest-md5-nonce-count'.
	New functions `sasl-digest-md5-digest-response' and
	`sasl-digest-md5-parse-digest-challenge'.
	* smtp.el (TopLevel): New function `smtp-auth-digest-md5'.

2000-01-06  Kenichi OKADA <okada@opaopa.org>

	* sasl.el (TopLevel): Autoload 'scram-md5' for
	`scram-make-security-info'.

2000-01-06  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-authenticate-type): Rename from `smtp-authenticate-type'.
	(smtp-authenticate-user): Rename from `smtp-authentication-user'.
	(smtp-authenticate-passphrase): Rename from `smtp-authentication-passphrase'.
	(smtp-authenticate-method-alist): Rename from `smtp-authenticate-method-alist)'.

2000-01-05  Katsumi Yamaoka   <yamaoka@jpl.org>
